HTML and View work

--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -8,9 +8,9 @@
     <head lang="en">
         <meta charset="UTF-8">
         <title>
-            Rango -
+            4Sof5 -
             {% block title_block %}
-                How to Tango with Django!
+                BASE
             {% endblock %}
         </title>
     </head>
