--- a/templates/rango/film.html
+++ b/templates/rango/film.html
@@ -1,10 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% load staticfiles %}
 
-</body>
-</html>
+{% block title_block %}
+    {% if film %}
+        {{ film.title }}
+    {% else %}
+        Unknown Category
+    {% endif %}
+{% endblock %}
+
+{% block body_block %}
+    {% if film %}
+        <h1>{{film.title}}</h1>
+        {% for review in reviews %}
+        <li>
+            {{review.reviewerID}} {{review.date}} {{review.rating}}/5
+        </li>
+        {% endfor %}
+    {% endif %}
+{% endblock %}
