--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -21,5 +21,11 @@
             {% endblock %}
         </div>
         <hr />
+    <div>
+        <ul>
+            <li><a href="{% url 'rango:about' %}">About</li>
+            <li><a href="{% url 'rango:home' %}">Home</a></li>
+        </ul>
+    </div>
     </body>
 </html>
