--- a/templates/rango/reviewer.html
+++ b/templates/rango/reviewer.html
@@ -1,10 +1,29 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
 
-</body>
-</html>
+{% block title_block %}
+    {{reviewer.displayName}}
+{% endblock %}
+
+{% block body_block %}
+    <h2>Highest Rated</h2>
+    {% if reviewer %}
+        {{reviewer.displayName}}
+    {% else %}
+        <strong>Reviewer does not exist</strong>
+    {% endif %}
+
+    <h2>Recent reviews</h2>
+    {% if reviews %}
+        <ul>
+            {% for review in reviews %}
+                <li>
+                    {{review.reviewerID}} left a review for: <a href="{% url 'rango:show_film' review.fkID.slug %}">{{review.fkID}}</a>. At {{review.date}}
+                </li>
+            {% endfor %}
+        </ul>
+    {% else %}
+        <strong>No recent reviews</strong>
+    {% endif %}
+
+
+{% endblock %}
