--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% load staticfiles %}
 
-</body>
-</html>
+{% block title_block %}
+    About
+{% endblock %}
+
+{% block body_block %}
+    About
+{% endblock %}
