--- a/templates/rango/film.html
+++ b/templates/rango/film.html
@@ -22,6 +22,10 @@
             <strong>There are no reviews for this movie.</strong>
         {% endif %}
 
+        {% if user.is_reviewer %}
+            <a href="{% url 'rango:add_review' film %}">Leave a review as {{user}}?</a>
+        {% endif %}
+
     {% else %}
         <strong>Error, this film does not exist.</strong>
     {% endif %}
