--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -25,12 +25,16 @@
         <ul>
             <li><a href="{% url 'rango:about' %}">About</li>
             <li><a href="{% url 'rango:home' %}">Home</a></li>
-            {{user}}
             {% if user.is_reviewer %}
                 <li><a href="{% url 'rango:show_reviewer' user %}">My Reviewer Page</a></li>
             {% endif %}
             {% if user.is_admin %}
-                <li><a href = "{% url 'rango:add_film' %}">ADD FILM</a></li>
+                <li><a href = "{% url 'rango:add_film' %}">Add a New Film</a></li>
+            {% endif %}
+            {% if user.is_authenticated %}
+                <li><a href="{% url 'rango:logout' %}">Logout</a></li>
+            {% else %}
+                <li><a href="{% url 'rango:login' %}">Login</a></li>
             {% endif %}
         </ul>
     </div>
