--- a/templates/rango/search.html
+++ b/templates/rango/search.html
@@ -1,10 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
 
-</body>
-</html>
+{% block title_block %}
+    Search
+{% endblock %}
+
+{% block body_block %}
+<div class="row">
+    <div class="col-6 align-left">
+        <i id="search-icon" class="fas fa-search"></i>
+        <input id="user-input" placeholder="Search">
+    </div>
+
+    <div id="replaceable-content" class="col-6">
+        {% include 'search-results-partial.html' %}
+
+    </div>
+</div>
+{% endblock %}
