--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -7,13 +7,15 @@
 <html>
     <head lang="en">
         <meta charset="UTF-8">
-        <meta name="viewport", content="width=device-width, inital-scale=1, shrink-to-fit=no">
+        <meta name="viewport" content="width=device-width, inital-scale=1, shrink-to-fit=no">
+        <link rel="icon" href="{% static 'images/favicon.ico' %}">
         <title>
-            4Sof5 -
+            4Soof5 -
             {% block title_block %}
                 BASE
             {% endblock %}
         </title>
+
         <link rel="stylesheet"
         href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
@@ -26,40 +28,58 @@
          <!-- FontAwesome CDN -->
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 
-        <link href="{% static "main.css" %}"
-        rel="stylesheet"
-        media="screen">
+        <link href='{% static "main.css" %}' rel="stylesheet" media="screen">
     </head>
 
     <body>
+      <!--<div class="container">-->
+         <header class="header py-3">
+            <div class="header-divs row flex-nowrap justify-content-between align-items-center">
+
+              <div class="header-div-main header-divs col-4 text-center">
+                <a class="header-logo" href="#">4ScreamsOutOf5</a>
+              </div>
+              <div class="header-div-other header-divs col-4 d-flex justify-content-end align-items-center">
+                 {% if user.is_authenticated %}
+                    <a class="header-elements btn btn-sm btn-outline-secondary" href="{% url 'rango:logout' %}">Logout</a>
+                 {% else %}
+                    <a class="header-elements btn btn-sm btn-outline-secondary" href="{% url 'rango:login' %}">Login</a>
+                    <a class="header-elements btn btn-sm btn-outline-secondary" href="{% url 'rango:register' %}">Register</a>
+                 {% endif %}
+              </div>
+            </div>
+         </header>
+
+        <div class="nav nav-scroller py-1 mb-2">
+          <nav class="nav d-flex justify-content-between">
+              <a class="nav-a p-2 " href="{% url 'rango:about' %}">About</a>
+              <a class="nav-a p-2 " href="{% url 'rango:home' %}">Home</a>
+              <a class="nav-a p-2 text-muted" href="{% url 'rango:search' %}">Search</a>
+              {% if user.is_reviewer %}
+                <a class="p-2 text-muted" href="{% url 'rango:show_reviewer' user %}">My Reviewer Page</a>
+              {% endif %}
+              {% if user.is_admin %}
+                <a class="nav-a p-2 text-muted" href = "{% url 'rango:add_film' %}">Add a New Film</a>
+              {% endif %}
+              {% if user.is_authenticated %}
+                <a class="p-2 text-muted" href="{% url 'rango:logout' %}">Logout</a>
+              {% else %}
+                <a class="p-2 text-muted" href="{% url 'rango:login' %}">Login</a>
+                <a class="p-2 text-muted" href="{% url 'rango:register' %}">Register</a>
+              {% endif %}
+          </nav>
+        </div>
+
         <div>
             {% block body_block %}
             {% endblock %}
         </div>
         <hr />
-    <div>
-        <ul>
-            <li><a href="{% url 'rango:about' %}">About</li>
-            <li><a href="{% url 'rango:home' %}">Home</a></li>
-            <li><a href="{% url 'rango:search' %}">Search</a></li>
-            {% if user.is_reviewer %}
-                <li><a href="{% url 'rango:show_reviewer' user %}">My Reviewer Page</a></li>
-            {% endif %}
-            {% if user.is_admin %}
-                <li><a href = "{% url 'rango:add_film' %}">Add a New Film</a></li>
-            {% endif %}
-            {% if user.is_authenticated %}
 
-                <li><a href="{% url 'rango:logout' %}">Logout</a></li>
-            {% else %}
-                <li><a href="{% url 'rango:login' %}">Login</a></li>
-                <li><a href="{% url 'rango:register' %}">Register</a></li>
-            {% endif %}
-        </ul>
-    </div>
 
     {% block footer %}
-        <script type="text/javascript" src="{% static "javascript/main.js" %}"></script>
+        <script type="text/javascript" src='{% static "javascript/main.js" %}'></script>
     {% endblock %}
+      <!--</div>-->
     </body>
 </html>
