--- a/templates/rango/add_film.html
+++ b/templates/rango/add_film.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title_block %}
-    Reviewer Upgrade Registry
+    Add Film Form
 {% endblock %}
 
 {% block body_block %}
