--- a/templates/rango/add_review.html
+++ b/templates/rango/add_review.html
@@ -25,7 +25,7 @@
 
        {{film}}
 
-       <input type = "submit" name = "submit" value="Register" />
+       <input type = "submit" name = "submit" value="Submit Review" />
    </form>
     {% endif %}
 
