--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -6,60 +6,60 @@
 
 <html>
     <head lang="en">
+        <link rel="stylesheet" href="{% static 'base.css' %}">
         <meta charset="UTF-8">
-        <meta name="viewport", content="width=device-width, inital-scale=1, shrink-to-fit=no">
         <title>
             4Sof5 -
             {% block title_block %}
                 BASE
             {% endblock %}
         </title>
-        <link rel="stylesheet"
-        href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-        crossorigin="anonymous">
 
-          <!-- JQuery CDN -->
 
         <script src="{% static 'javascript/jquery-3.4.1.min.js' %}"></script>
 
-         <!-- FontAwesome CDN -->
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 
-        <link href="{% static "main.css" %}"
-        rel="stylesheet"
-        media="screen">
+
     </head>
 
     <body>
+
         <div>
-            {% block body_block %}
-            {% endblock %}
-        </div>
-        <hr />
-    <div>
-        <ul>
-            <li><a href="{% url 'rango:about' %}">About</li>
+        <ul id = "nav">
+            <li><a href="{% url 'rango:about' %}">About</a></li>
             <li><a href="{% url 'rango:home' %}">Home</a></li>
             <li><a href="{% url 'rango:search' %}">Search</a></li>
             {% if user.is_reviewer %}
-                <li><a href="{% url 'rango:show_reviewer' user %}">My Reviewer Page</a></li>
+                <li style="float:right"><a href="{% url 'rango:show_reviewer' user %}">My Reviewer Page</a></li>
             {% endif %}
             {% if user.is_admin %}
                 <li><a href = "{% url 'rango:add_film' %}">Add a New Film</a></li>
             {% endif %}
             {% if user.is_authenticated %}
 
-                <li><a href="{% url 'rango:logout' %}">Logout</a></li>
+                <li style="float:right"><a href="{% url 'rango:logout' %}">Logout</a></li>
             {% else %}
-                <li><a href="{% url 'rango:login' %}">Login</a></li>
-                <li><a href="{% url 'rango:register' %}">Register</a></li>
+                <li style="float:right"><a href="{% url 'rango:login' %}">Login</a></li>
+                <li style="float:right"><a href="{% url 'rango:register' %}">Register</a></li>
             {% endif %}
         </ul>
     </div>
 
+        <div>
+            {% block body_block %}
+            {% endblock %}
+        </div>
+
+
     {% block footer %}
-        <script type="text/javascript" src="{% static "javascript/main.js" %}"></script>
+        <script type="text/javascript" src="{% static 'javascript/main.js' %}"></script>
+        <script type="text/javascript" src="{%static 'jquery.activeNavigation.js' %}"></script>
+	    <script type="text/javascript">
+        $(document).ready(function(){
+        $(document).activeNavigation("#nav")
+        });
+        </script>
+
     {% endblock %}
     </body>
 </html>
