--- a/templates/rango/film.html
+++ b/templates/rango/film.html
@@ -21,8 +21,8 @@
     </div>
 
     </div>
+        Current reviewer rating: {{film.score}} -- Current user rating: {{film.userRate}}</br>
         {% if reviews %}
-            Current reviewer rating: {{film.score}} -- Current user rating: {{film.userRate}}</br>
         <ul>
             {% for review in reviews %}
             <li>
@@ -33,12 +33,18 @@
             {% endfor %}
         </ul>
         {% else %}
-            <strong>There are no reviews for this movie.</strong>
+            <strong>There are no reviews for this movie.</strong></br>
         {% endif %}
     </div>
 
-        {% if user.is_reviewer %}
-            <a href="{% url 'rango:add_review' film.slug %}">Leave a review as {{user}}?</a>
+        {% if user.is_reviewer%}
+            {% if user.reviewer %}
+                <a href="{% url 'rango:add_review' film.slug %}">Leave a review as {{user}}?</a>
+            {% else %}
+                <strong>You must visit and create your reviewer profile before leaving a review.</strong>
+            {% endif %}
+        {% elif user.is_authenticated %}
+            <a href="{% url 'rango:add_rating' film.slug %}">Leave a rating?</a>
         {% endif %}
 
     {% else %}
