--- a/templates/rango/login.html
+++ b/templates/rango/login.html
@@ -6,16 +6,21 @@
 {% endblock %}
 
 {% block body_block %}
-<h1>Login to Rango</h1>
 {% if error %}
 <strong>{{error}}</strong>
 {% endif %}
-<form id="login_form" method="post" action="{% url 'rango:login' %}">
-    {% csrf_token %}
-    Username: <input type="text" name="username" value="" size="50" />
-    <br />
-    Password: <input type="password" name="password" value="" size="50" />
-    <br />
-    <input type="submit" value="submit" />
-</form>
+
+<div class="container">
+    <form class="form-signin form" id="login_form" role="form" method="post" action="{% url 'rango:login' %}">
+        <h1 class="h3 mb-3 font-weight-normal">Please log in</h1>
+        {% csrf_token %}
+        <label for="id_username" class="sr-only">Username</label>
+        <input type="text" name="username" id="id_username" class="form-control" placeholder="Username" required autofocus>
+        <label for="id_password" class="sr-only">Password</label>
+        <input type="password" name="password" id="id_password"class="form-control" placeholder="Password"required>
+
+        <button class="btn btn-lg btn-secondary btn-block" type="submit" value="Submit">Log in</button>
+    </form>
+</div>
+
 {% endblock %}
