--- a/templates/rango/register.html
+++ b/templates/rango/register.html
@@ -6,20 +6,27 @@
 {% endblock %}
 
 {% block body_block %}
-<h1>Register for Rango</h1>
-{% if registered %}
-Rango says: <strong>thank you for registering!</strong>
-<a href="{% url 'rango:home' %}">Return to the homepage.</a><br />
-{% else %}
-Rango says: <strong>register here!</strong><br />
-<form id="user_form" method="post" action="{% url 'rango:register' %}" enctype="multipart/form-data">
+<div class="container">
+    <div class="row">
+        <div class="form-group">
+            <form role="form" method="post" action="."
+        </div>
+    </div>
+</div>
 
-    {% csrf_token %}
-    {{user_form.as_p}}
-    {{profile_form.as_p}}
+    <h1>Register for 4SOO5</h1>
+    {% if registered %}
+    <p class="strong-text">Thank you for registering!</p>
+    <a href="{% url 'rango:home' %}">Return to the homepage.</a><br />
+    {% else %}
+    <form id="user_form" method="post" action="{% url 'rango:register' %}" enctype="multipart/form-data">
 
-    <input type="submit" name="submit" value="Register" />
+        {% csrf_token %}
+        {{user_form.as_p}}
+        {{profile_form.as_p}}
 
-</form>
-{% endif %}
+        <input type="submit" name="submit" value="Register" />
+
+    </form>
+    {% endif %}
 {% endblock %}
