--- a/templates/rango/add_film.html
+++ b/templates/rango/add_film.html
@@ -6,7 +6,7 @@
 
 {% block body_block %}
     {{user}}
-    <h2>Register</h2>
+    <h2>Add film</h2>
    <form id="film_form" method="post" action="{% url 'rango:add_film' %}" enctype="multipart/form-data">
        {% csrf_token %}
        {% for hidden in form.hidden_fields %}
@@ -20,7 +20,7 @@
         </br>
        {% endfor %}
 
-       <input type = "submit" name = "submit" value="Register" />
+       <input type = "submit" name = "submit" value="Add" />
    </form>
 
 
