--- a/templates/rango/home.html
+++ b/templates/rango/home.html
@@ -25,7 +25,7 @@
                         <ul>
                         {% for film in films %}
                             <li>
-                            <a href="{% url 'rango:show_film' film.slug%}">{{ film.title }} : {{ film.score }}/5</a>
+                            <a class="card-a" href="{% url 'rango:show_film' film.slug%}">{{ film.title }} : {{ film.score }}/5</a>
                             </li>
                         {% endfor %}
                         </ul>
@@ -42,14 +42,15 @@
                 <div class="card card-col mb-6">
                     <div class="card-body">
                         <h2>Most Recent Reviews</h2>
-                        <p class="card-text">
+                        <p class="card-text card-a">
                         {% if reviews %}
                         <ul>
                         {% for review in reviews %}
                             <li>
-                            <a href="{% url 'rango:show_reviewer' review.reviewerID.slug%}">{{review.reviewerID}}</a>
-                            left a review for: <a href="{% url 'rango:show_film' review.fkID.slug %}">{{review.fkID}}</a>.
-                            At {{review.date}}
+                            <a class="card-a" href="{% url 'rango:show_reviewer' review.reviewerID.slug%}">{{review.reviewerID}}</a>
+                            left a review for:
+                                <a class="card-a" href="{% url 'rango:show_film' review.fkID.slug %}">{{review.fkID}}</a>.
+                            On {{review.date}}
                             </li>
                         {% endfor %}
                         </ul>
